# tinyzxing

./: CMakeLists.txt  README.md
cli/src/: ImageReaderSource.cpp  ImageReaderSource.h  demo.cpp  main.cpp
core/src/zxing/: Binarizer.h  BinaryBitmap.h  LuminanceSource.h  Reader.h  ResultPoint.cpp  ResultPoint.h  ZXing.h  ZXingConfig.h
core/src/zxing/common/: BitMatrix.h  BitSource.h  DetectorResult.cpp  DetectorResult.h  GlobalHistogramBinarizer.cpp  GlobalHistogramBinarizer.h  GridSampler.cpp  GridSampler.h  PerspectiveTransform.cpp  PerspectiveTransform.h
core/src/zxing/common/detector/: MathUtils.h
core/src/zxing/common/reedsolomon/: GenericGF.cpp  GenericGF.h  GenericGFPoly.cpp  GenericGFPoly.h  ReedSolomonDecoder.cpp  ReedSolomonDecoder.h
core/src/zxing/qrcode/: ErrorCorrectionLevel.h  FormatInformation.cpp  FormatInformation.h  QRCodeReader.cpp  QRCodeReader.h  Version.cpp  Version.h
core/src/zxing/qrcode/decoder/: BitMatrixParser.cpp  BitMatrixParser.h  DataBlock.cpp  DataBlock.h  DataMask.cpp  DataMask.h  DecodedBitStreamParser.cpp  DecodedBitStreamParser.h  Decoder.cpp  Decoder.h  Mode.cpp  Mode.h
core/src/zxing/qrcode/detector/: AlignmentPattern.cpp  AlignmentPattern.h  AlignmentPatternFinder.cpp  AlignmentPatternFinder.h  Detector.cpp  Detector.h  FinderPattern.cpp  FinderPattern.h  FinderPatternFinder.cpp  FinderPatternFinder.h  FinderPatternInfo.cpp  FinderPatternInfo.h
test_data/: result.txt
